--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <title>MOGO</title>  
       <meta charset="UTF-8">
       <link rel="stylesheet" href="styles.css"> 
-      <!--<link rel="stylesheet" href="sanitize.css">-->
+      <link rel="stylesheet" href="sanitize.css">
       <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,700i,900" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
