changed about section to cart to make it universal

--- a/index.html
+++ b/index.html
@@ -62,24 +62,24 @@
                     </div>
                 </div>
 
-                <div class="about">
-                    <div class="about-item">
-                        <div class="about-img">
+                <div class="card">
+                    <div class="card-item">
+                        <div class="card-img">
                             <img src="img/about/about_1.jpg" alt="computer image">
-                            <div class="about-text">Super Team</div>
+                            <div class="card-text">Super Team</div>
 
                         </div>
                     </div>
-                    <div class="about-item">
-                            <div class="about-img">
+                    <div class="card-item">
+                            <div class="card-img">
                                 <img src="img/about/about_2.jpg" alt="working table">
-                                <div class="about-text">Tempor</div>
+                                <div class="card-text">Tempor</div>
                             </div>
                     </div>
-                    <div class="about-item">
-                            <div class="about-img">
+                    <div class="card-item">
+                            <div class="card-img">
                                 <img src="img/about/about_3.jpg" alt="plant on table">
-                                <div class="about-text">Ut Labore</div>
+                                <div class="card-text">Ut Labore</div>
                             </div>
                     </div>
                 </div>
@@ -277,7 +277,41 @@
                 </div>
 
             </div>
-        </div>
+        </div> <!--Reviews Section-->
+
+        <section class="section">
+            <div class="container">
+                <div class="section-header">
+                    <h3 class="sect-subtitle">Who We Are</h3>
+                    <h2 class="sect-title">Meet our team</h2>
+                    <div class="sect-text"><p>At erat pellentesque adipiscing commodo elit. Augue mauris augue 
+                        neque gravida in fermentum et sollicitudin. Ultrices dui sapien eget mi proin sed. Odio
+                         morbi quis commodo odio aenean sed adipiscing diam donec. </p></div>
+                </div>
+
+                <div class="card">
+                        <div class="card-item">
+                            <div class="card-img">
+                                <img src="img/whoWeAre/matthew.png" alt="Mattew Dix">
+                                <div class="card-text"></div>
+    
+                            </div>
+                        </div>
+                        <div class="card-item">
+                                <div class="card-img">
+                                    <img src="img/whoWeAre/christopher.png" alt="Christopher Campbell">
+                                    <div class="card-text">Tempor</div>
+                                </div>
+                        </div>
+                        <div class="card-item">
+                                <div class="card-img">
+                                    <img src="img/whoWeAre/michael.png" alt="Michaael Fertig">
+                                    <div class="card-text">Ut Labore</div>
+                                </div>
+                        </div>
+                    </div>
+            </div>
+        </section>
        
 
     </body>
